rellenar lorems ipsums - editar pequenos textos

--- a/index.html
+++ b/index.html
@@ -106,9 +106,12 @@
 
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Dante Delprato</h2>
-        <p class="seccion-texto">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel natus, consequatur enim
-          cupiditate, adipisci voluptatem porro numquam cumque facilis commodi fugiat beatae. Mollitia, explicabo.
-          Dolorum modi iusto officiis. A, atque!</p>
+        <p class="seccion-texto">Soy un Vendedor Profesional con más de 12 años de experiencia. Ventas minoritas, mayorista y de intangibles.
+          <br><br>
+          Me estoy dedicando al desarrollo web para llevar mi carrera al siguiente nivel y poder aplicar toda la experiencia adquiría en estos años a las tecnologías que corren hoy día.
+          <br><br>
+          Ojalá disfrutes la visita a mi página y te decidas a que trabajemos juntos.
+          </p>
       </div>
 
     </section>
@@ -125,9 +128,10 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui aspernatur ipsum accusantium obcaecati
-              reiciendis quia, ab, quod, voluptas eaque fugit delectus omnis nostrum alias saepe numquam illum!
-              Consequuntur, quibusdam atque?</p>
+            <p>Estoy en plena capacitación en programación en HTML, CSS, JavaScript y JAVA para poder llevar adelante el desarrollo de Sitios Web responsivos y a medida.
+              <br><br>
+              Quiero imprimir mis conocimientos en Marketing para el diseño de Páginas Web Interesantes, Divertidas y Atrapantes que despierten las ganas de adquirir y ser parte de lo que en ellas encuentres.
+              </p>
             <div class="badge-contenedor">
               <!--En español badge es Insignia-->
               <span class="badge text-bg-primary">HTML</span>
@@ -141,9 +145,12 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Diseño Gráfico</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui aspernatur ipsum accusantium obcaecati
-              reiciendis quia, ab, quod, voluptas eaque fugit delectus omnis nostrum alias saepe numquam illum!
-              Consequuntur, quibusdam atque?</p>
+            <p>Diseño Gráfico de Banners para redes sociales, miniaturas para videos, flyers publicitarios, tarjetas personales y de invitación a eventos.
+              <br><br>
+              Realizo Fotografía Profesional de productos para la composición de catálogos, con posterior edición grafica digital de imperfecciones, luces y entornos. Tus productos lucirán todas sus cualidades y beneficios.
+              <br><br>
+              ¡Cuéntame tu visión y llevémosla adelante juntos!
+              </p>
             <div class="badge-contenedor">
               <span class="badge text-bg-primary">Diseño de Logo</span>
               <span class="badge text-bg-primary">Banner</span>
@@ -156,9 +163,12 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Vendedor Profesional</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Qui aspernatur ipsum accusantium obcaecati
-              reiciendis quia, ab, quod, voluptas eaque fugit delectus omnis nostrum alias saepe numquam illum!
-              Consequuntur, quibusdam atque?</p>
+            <p>Con más de 10 años como vendedor, sé cómo llegar a tu público objetivo y captar su atención.
+              <br><br>
+              Gestiono el Diseño, Construcción y Atención de tus redes sociales para concretar objetivos claros de consultas y conversiones en ventas constantes y sonantes.
+              <br><br>
+              ¡Lleguemos a tus clientes para que luego ellos lleguen a ti!
+              </p>
             <div class="badge-contenedor">
               <span class="badge text-bg-primary">Productos Tangibles</span>
               <span class="badge text-bg-primary">Productos Intangibles</span>
@@ -177,7 +187,7 @@
 
     <section id="proyectos-recientes" class="proyectos-recientes seccion-clara d-flex flex-column">
       <h2 class="seccion-titulo texto-negro">Proyectos Recientes</h2>
-      <h3 class="seccion-descripcion">Estos son algunos de mis proyectos...</h3>
+      <h3 class="seccion-descripcion">Estos son algunos ejemplos de mi trabajo...</h3>
 
       <!--Galeria de Proyectos-->
       <!--Proyectos-->
@@ -324,7 +334,7 @@
       <h2 class="seccion-titulo texto-negro">Cursos de Diseño Web - Recomendados</h2>
       <div class="card">
         <div class="card-header">
-          Estos cursos hé tomado y te los recomiendo!
+          Algunos de los cursos que hé tomado y te los recomiendo!
         </div>
         <ul class="list-group list-group-flush">
           <a href="https://inscripcionesagencia.bue.edu.ar/codoacodo/list" target="_blank" rel="noopener noreferrer">
@@ -426,7 +436,10 @@
                 src="https://lh5.googleusercontent.com/-UOvkAfayBDE/AAAAAAAAAAI/AAAAAAAAAAA/Dtf7jxq5wL8/s160-p-k-no-ns-nd/photo.jpg"
                 alt="Testimonio Cliente 3">
 
-              <p class="testimonio-texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore consectetur ipsam quaerat totam, aliquam sint officia voluptate doloribus corporis. Corporis sequi delectus explicabo accusantium nam reiciendis suscipit vitae maxime soluta.</p>
+              <p class="testimonio-texto">Hemos tenido el gran gusto de trabajar juntos y contar con su profesionalismo para los puesto requeridos. Puntualmente de Community Manager y Encargado del Área de Rent a Cars de nuestra empresa.
+                <br><br>
+                Dejamos expresa nuestra recomendación sobre su trabajo.
+              </p>
 
               <div class="testimonio-info">
                 <p class="cliente">Luis Daniel Boggio</p>
@@ -478,7 +491,7 @@
               ¡Hablemos!
             </div>
             <div class="col-12 col-md-4 descripcion">
-              Contactame para desarrollar tu Propio SITIO WEP y potencia tu emprendimiento al máximo
+              Contactame para desarrollar tu Propio SITIO WEP y potenciar tu emprendimiento al máximo
             </div>
             <div class="col-12 col-md-4">
               <a href="mailto:dantedelprato@gmail.com">
