agregar boton flotante whatsapp.

--- a/index.html
+++ b/index.html
@@ -131,12 +131,15 @@
             <p>Estoy en plena capacitación en programación en HTML, CSS, JavaScript y JAVA para poder llevar adelante el desarrollo de Sitios Web responsivos y a medida.
               <br><br>
               Quiero imprimir mis conocimientos en Marketing para el diseño de Páginas Web Interesantes, Divertidas y Atrapantes que despierten las ganas de adquirir y ser parte de lo que en ellas encuentres.
+              <br><br>
+              Si no estamos en Internet, no estamos en el mundo.
               </p>
             <div class="badge-contenedor">
               <!--En español badge es Insignia-->
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
               <span class="badge text-bg-primary">Javascript</span>
+              <span class="badge text-bg-primary">NodeJS</span>
               <span class="badge text-bg-primary">JAVA</span>
             </div>
           </div>
@@ -504,8 +507,17 @@
 
         </div>
       </div>
-
     </section>
+
+    <!-- ---------------------------------------- -->
+    <!--             Boton Whatsapp               -->
+    <!-- ---------------------------------------- -->
+
+    <aside id="boton-flotante-whatsapp">
+      <a class="btn-wsp" href="http://api.whatsapp.com/send?phone=5493516115500" target="_blank" rel="noopener noreferrer">
+        <i class="bi bi-whatsapp"></i>
+      </a>
+    </aside>
 
   </main>
 
