correciones ortograficas menores

--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
 
       <div class="contenedor">
         <h2 class="seccion-titulo">Conoce a Dante Delprato</h2>
-        <p class="seccion-texto">Soy un Vendedor Profesional con más de 12 años de experiencia. Ventas minoritas, mayorista y de intangibles.
+        <p class="seccion-texto">Soy un Vendedor Profesional con más de 12 años de experiencia. Ventas minoristas, mayorista e intangibles.
           <br><br>
-          Me estoy dedicando al desarrollo web para llevar mi carrera al siguiente nivel y poder aplicar toda la experiencia adquiría en estos años a las tecnologías que corren hoy día.
+          Me estoy dedicando al desarrollo web para llevar mi carrera al siguiente nivel y poder aplicar toda la experiencia adquirida en estos años a las tecnologías que corren hoy en día.
           <br><br>
           Ojalá disfrutes la visita a mi página y te decidas a que trabajemos juntos.
           </p>
@@ -130,7 +130,7 @@
             <p class="experiencia-titulo">Desarrollo Web</p>
             <p>Estoy en plena capacitación en programación en HTML, CSS, JavaScript y JAVA para poder llevar adelante el desarrollo de Sitios Web responsivos y a medida.
               <br><br>
-              Quiero imprimir mis conocimientos en Marketing para el diseño de Páginas Web Interesantes, Divertidas y Atrapantes que despierten las ganas de adquirir y ser parte de lo que en ellas encuentres.
+              Quiero imprimir mis conocimientos en Marketing para el diseño de Páginas Web Interesantes, divertidas y atrapantes que despierten las ganas de ser parte y adquirir lo que en ellas encuentres.
               <br><br>
               Si no estamos en Internet, no estamos en el mundo.
               </p>
@@ -150,7 +150,7 @@
             <p class="experiencia-titulo">Diseño Gráfico</p>
             <p>Diseño Gráfico de Banners para redes sociales, miniaturas para videos, flyers publicitarios, tarjetas personales y de invitación a eventos.
               <br><br>
-              Realizo Fotografía Profesional de productos para la composición de catálogos, con posterior edición grafica digital de imperfecciones, luces y entornos. Tus productos lucirán todas sus cualidades y beneficios.
+              Realizo Fotografía Profesional de productos para la composición de catálogos, con posterior edición gráfica digital de imperfecciones, luces y entornos. Tus productos lucirán todas sus cualidades y beneficios.
               <br><br>
               ¡Cuéntame tu visión y llevémosla adelante juntos!
               </p>
@@ -332,9 +332,9 @@
     <!--           Cursos Recomendados            -->
     <!-- ---------------------------------------- -->
 
-    <section id="articulos" class="articulos justify-content-start">
+    <section id="articulos" class="articulos d-flex justify-content-center align-content-center">
       <!-- Aqui usaremos un List Group y una card-->
-      <h2 class="seccion-titulo texto-negro">Cursos de Diseño Web - Recomendados</h2>
+      <h2 class="seccion-titulo texto-negro align-content-center">Cursos de Diseño Web Recomendados </h2>
       <div class="card">
         <div class="card-header">
           Algunos de los cursos que hé tomado y te los recomiendo!
