correciones menores. icono navbar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
           <!--Icono de la barra de navegación-->
           <a class="navbar-brand" href="#">
-            <img src="/src/img/ico/id-card-svgrepo-com.svg" width="50" alt="Icono de la Pág.">
+            <img src="./src/img/ico/id-card-svgrepo-com.svg" width="50" alt="Icono de la Pág.">
           </a>
 
           <!--Elementos del Menu-->
@@ -332,12 +332,12 @@
     <!--           Cursos Recomendados            -->
     <!-- ---------------------------------------- -->
 
-    <section id="articulos" class="articulos d-flex justify-content-center align-content-center">
+    <section id="articulos" class="articulos justify-content-start">
       <!-- Aqui usaremos un List Group y una card-->
-      <h2 class="seccion-titulo texto-negro align-content-center">Cursos de Diseño Web Recomendados </h2>
+      <h2 class="seccion-titulo texto-negro">Cursos Recomendados</h2>
       <div class="card">
         <div class="card-header">
-          Algunos de los cursos que hé tomado y te los recomiendo!
+          Algunos de los cursos que hé tomado y que te recomiendo!
         </div>
         <ul class="list-group list-group-flush">
           <a href="https://inscripcionesagencia.bue.edu.ar/codoacodo/list" target="_blank" rel="noopener noreferrer">
@@ -386,8 +386,7 @@
                 alt="Testimonio Cliente 1">
 
               <p class="testimonio-texto">Antes que nada, excelente atención de Dante, la verdad que da gusto
-                encontrarse con gente con tan buena onda en tus vacaciones. En cuanto al auto, insuperable, un modelo
-                flamante que nos dio la tranquilidad de movernos sin temor a que surgiera alguna falla mecánica.
+                encontrarse con gente con tan buena onda en tus vacaciones.[...]
                 Viajamos 5 personas con nuestros equipajes y anduvimos muy cómodos, el Logan es un auto muy rendidor en
                 ese aspecto y también en cuanto al consumo. Híper recomendables!!!</p>
 
@@ -406,7 +405,7 @@
                 src="https://lh3.googleusercontent.com/a-/ACB-R5QjQKFtaZxk5LSgVJw3veVJKOxU_HH2rF576Uo44A=w120-h120-p-rp-mo-br100"
                 alt="Testimonio Cliente 2">
 
-              <p class="testimonio-texto">Excelente atención en todo momento. Alquilamos un auto por 10 días, Dante nos asistió en todo lo   que necesitamos. El auto estaba en excelentes condiciones para recorrer Catamarca. Un placer, sin duda lo recomiendo!!</p>
+              <p class="testimonio-texto">Excelente atención en todo momento. Alquilamos un auto por 10 días, Dante nos asistió en todo lo que necesitamos. El auto estaba en excelentes condiciones para recorrer Catamarca. Un placer, sin duda lo recomiendo!!</p>
 
               <div class="testimonio-info">
                 <p class="cliente">Melisa Jordan</p>
@@ -504,7 +503,6 @@
               </a>
             </div>
           </div>
-
         </div>
       </div>
     </section>
@@ -521,9 +519,8 @@
 
   </main>
 
-  <footer>
-    <!--Pie de Página-->
-    <div class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
+  <!--Pie de Página-->
+  <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
       <img class="footer-logo" src="./src/img/svg/perfil alt.svg" alt="Logo del Portafolio">
       <p class="footer-texto text-center"> 
         Aprendo todos los días y siempre doy lo mejor de mi en cada proyecto <br>
@@ -546,7 +543,6 @@
           <i class="bi bi-envelope"></i>
         </a>
       </div>
-    </div>
     <div class="derechos-de-autor">Creado por Dante Delprato (2023) &#169;</div>
   </footer>
 
