--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
           <!--Proyecto 1-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/Sandero RS frente acompañante.jpg"
+              <img src="./src/img/Proyectos/Catalogo/Sandero RS frente acompañante.webp"
                 alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Foto Catálogo - Frontal</p>
@@ -220,7 +220,7 @@
           <!--Proyecto 2-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/SAnder RS Cola acompañante.jpg"
+              <img src="./src/img/Proyectos/Catalogo/SAnder RS Cola acompañante.webp"
                 alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Foto Catálogo - Posterior</p>
@@ -240,7 +240,7 @@
           <!--Proyecto 3-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/Interior Sandero Acompañante.jpg"
+              <img src="./src/img/Proyectos/Catalogo/Interior Sandero Acompañante.webp"
                 alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Foto Catálogo - Interior Lateral</p>
@@ -260,7 +260,7 @@
           <!--Proyecto 4-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/Interior Sandero.jpg"
+              <img src="./src/img/Proyectos/Catalogo/Interior Sandero.webp"
                 alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Foto Catálogo - Interior Frontal</p>
@@ -280,7 +280,7 @@
           <!--Proyecto 5-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/Entrega Sandero.jpg" alt="Foto Catalogo Proyecto 1 Sandero Frente">
+              <img src="./src/img/Proyectos/Catalogo/Entrega Sandero.webp" alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Fotografía Evento - Entrega de Unidad</p>
                 <div class="iconos-contenedor">
@@ -299,7 +299,7 @@
           <!--Proyecto 6-->
           <div class="col-12 col-md-6 col-lg-4">
             <div class="proyecto">
-              <img src="./src/img/Proyectos/Catalogo/Santander Propaganda.jpg"
+              <img src="./src/img/Proyectos/Catalogo/Santander Propaganda.webp"
                 alt="Foto Catalogo Proyecto 1 Sandero Frente">
               <div class="overlay">
                 <p>Fotografía Publicitaria - Banner</p>
