--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <div class="hero-principal">
         <img class="hero-img-people rounded-circle" src="./src/img/jpg/encuadrado.jpg" alt="Foto del Autor de la Pag.">
         <h1>Hola, Soy Dante Delprato</h1>
-        <h2>Programador de Paginas Web <br> Editor Gráfico de Fotografías para E-Commers.</h2>
+        <h2>Programador de Paginas Web <br> Editor Gráfico de Fotografías para E-Commerce.</h2>
       </div>
       <div class="hero-inferior">
         <img class="hero-inferior-img img-fluid" src="./src/img/svg/proceso-desarrollo-web_1209-74.avif"
